tests/good/misc/rng.pas
program RNG;

begin
    WriteLn(Random(100))
end.
