tests/bad/printf-without-external.pas
program printf_without_external;

begin
    printf('hello')
end.
